<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PCRBeta</string>
    <string name="enter">Enter</string>
    <string name="clear">Clear</string>
    <string name="pcr">PennCourseReview</string>
    <string name="browser">Get Serial Number</string>
    <string name="auth">Authenticate</string>
    <string name="search_text">Search for a class, professor, or department</string>
    <string name="instructor">Instructor</string>
    <string name="course_quality">Course Quality</string>
    <string name="instructor_quality">Instructor Quality</string>
    <string name="difficulty">Difficulty</string>
    <string name="course_id">Course ID</string>
    <string name="dept_note">*Ratings listed here are averaged over all past course offerings in the department.</string>
	<string name="main_auth1">You must have a valid PennKey</string>
    
    <color name="bg_blue">#D7D7EB</color>
    <color name="highlight_blue">#EEEFFF</color>
    <color name="text_navy">#191967</color>
    <color name="text_gray">#5E5E5E</color>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <string name="semester">Semester</string>
    <string name="recent">Recent</string>
    <string name="quit">Quit</string>
    <string name="search">Search</string>
    <string name="history">Recent History</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="start_text">Search, view your favorites, or choose from recent searches</string>

    <!-- Constants used for intents -->
    <string name="SEARCH_TYPE">SEARCH_TYPE</string>
    <string name="SEARCH_ALIAS">SEARCH_ALIAS</string>
    <string name="SEARCH_NAME">SEARCH_NAME</string>
    <string name="main_auth2">Please retrieve and enter your serial number below</string>
    <color name="instructor_color">#CAE1FF</color>
    <color name="department_color">#87CEFA</color>
    <color name="course_color">#98F5FF</color>
</resources>