<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/search"/>
    <item
        android:id="@+id/menu_recent"
        android:icon="@drawable/ic_menu_recent_history"
        android:title="@string/recent"/>
    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_menu_favorite"
        android:title="@string/favorites"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/settings"/>
    <item
        android:id="@+id/menu_quit"
        android:icon="@drawable/ic_menu_quit"
        android:title="@string/quit"/>
</menu>