<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_blue"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="10dip"
        android:background="@color/text_navy"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dip"
        android:background="@color/bg_blue"
        android:orientation="horizontal"
        android:padding="10dp" />

    <TextView
        android:id="@+id/serial_prompt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/main_auth2"
        android:textColor="@color/text_navy"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/serial_prompt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/main_auth1"
        android:textColor="@color/text_gray"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <EditText
            android:id="@+id/authenticate_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:completionThreshold="2"
            android:inputType="textNoSuggestions|textVisiblePassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/launch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browser" />

        <Button
            android:id="@+id/auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAuthSerialButtonClick"
            android:text="@string/auth" />
    </LinearLayout>

</LinearLayout>