<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@color/text_navy"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/pcr"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_blue"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dept_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:textColor="@color/text_navy"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/fav_heart"
                android:layout_width="55dip"
                android:layout_height="40dip"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:onClick="onFavHeartClick" />

            <TextView
                android:id="@+id/dept_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dept_number"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="2dp"
                android:textColor="@color/text_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dept_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dept_name"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="2dp"
                android:text="@string/dept_note"
                android:textColor="@color/black"
                android:textSize="11sp" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#FFFFFF" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@layout/bg_gradient"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/course_id_tab"
                android:layout_width="97dip"
                android:layout_height="43dip"
                android:layout_column="1"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:onClick="onClickSort"
                android:padding="5dip"
                android:text="@string/course_id"
                android:textColor="@color/text_navy"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/course_quality_tab"
                android:layout_width="70dip"
                android:layout_height="43dip"
                android:layout_column="2"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:onClick="onClickSort"
                android:padding="5dip"
                android:text="@string/course_quality"
                android:textColor="@color/text_navy"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/instructor_quality_tab"
                android:layout_width="70dip"
                android:layout_height="43dip"
                android:layout_column="3"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:onClick="onClickSort"
                android:padding="5dip"
                android:text="@string/instructor_quality"
                android:textColor="@color/text_navy"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/difficulty_tab"
                android:layout_width="65dip"
                android:layout_height="43dip"
                android:layout_column="4"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:onClick="onClickSort"
                android:padding="5dip"
                android:text="@string/difficulty"
                android:textColor="@color/text_navy"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/text_navy" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="7dip"
            android:background="@android:color/transparent" />

        <LinearLayout
            android:id="@+id/listview_layout"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" >

            <ListView
                android:id="@+id/reviews"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:cacheColorHint="#00000000"
                android:scrollbars="none" >
            </ListView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>